--- a/MyTaiwanStock/Base.lproj/Main.storyboard
+++ b/MyTaiwanStock/Base.lproj/Main.storyboard
@@ -816,23 +816,23 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" id="rvN-rk-0s8" customClass="NewsListTableViewCell" customModule="MyTaiwanStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="255.66667175292969"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="257.66665649414062"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rvN-rk-0s8" id="rL8-z7-O53">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="255.66667175292969"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="257.66665649414062"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Sa0-Pd-IT3">
-                                                    <rect key="frame" x="5" y="5" width="404" height="245.66666666666666"/>
+                                                    <rect key="frame" x="5" y="4.9999999999999858" width="404" height="247.66666666666663"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iiA-RP-30k">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="245.66666666666666"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="247.66666666666666"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="80" id="Cry-KH-IEH"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5nJ-BK-23T">
-                                                            <rect key="frame" x="85" y="0.0" width="319" height="245.66666666666666"/>
+                                                            <rect key="frame" x="85" y="0.0" width="319" height="247.66666666666666"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fh5-No-eWi">
                                                                     <rect key="frame" x="0.0" y="0.0" width="319" height="20.333333333333332"/>
@@ -841,13 +841,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Er-nv-s7J" userLabel="Detail">
-                                                                    <rect key="frame" x="0.0" y="20.333333333333329" width="319" height="211"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333329" width="319" height="213"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jc-nc-AXH">
-                                                                    <rect key="frame" x="0.0" y="231.33333333333334" width="319" height="14.333333333333343"/>
+                                                                    <rect key="frame" x="0.0" y="233.33333333333334" width="319" height="14.333333333333343"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" systemColor="systemGray2Color"/>
                                                                     <nil key="highlightedColor"/>
@@ -881,7 +881,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell2" rowHeight="221" id="d9R-5u-8nb" customClass="NewsListTableViewCell2" customModule="MyTaiwanStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="300.33333778381348" width="414" height="221"/>
+                                        <rect key="frame" x="0.0" y="302.33332252502441" width="414" height="221"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d9R-5u-8nb" id="fcn-cx-sCy">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="221"/>
@@ -945,7 +945,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bgu-cj-Ll7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1257.9710144927537" y="1754.3478260869567"/>
+            <point key="canvasLocation" x="2165.217391304348" y="1754.3478260869567"/>
         </scene>
         <!--Setting View Controller-->
         <scene sceneID="0Xy-QO-Gfc">
@@ -1039,7 +1039,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Whu-bO-7Dl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1490" y="1827"/>
+            <point key="canvasLocation" x="-584.05797101449275" y="1826.9021739130437"/>
         </scene>
         <!--Edit Fee View Controller-->
         <scene sceneID="rz3-7f-auw">
@@ -1207,7 +1207,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fXM-WF-jJ4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-208.69565217391306" y="1907.608695652174"/>
+            <point key="canvasLocation" x="698.55072463768124" y="1907.608695652174"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="Itd-6I-Q2H">
@@ -1241,7 +1241,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGi-2x-OfY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2613.04347826087" y="1754.3478260869567"/>
+            <point key="canvasLocation" x="3520.289855072464" y="1754.3478260869567"/>
         </scene>
         <!--Custom Tab Bar View Controller-->
         <scene sceneID="sfr-Vk-f5f">
@@ -1258,6 +1258,7 @@
                         <segue destination="Led-I7-15a" kind="relationship" relationship="viewControllers" id="bHn-hS-318"/>
                         <segue destination="onS-ff-HdI" kind="relationship" relationship="viewControllers" id="av5-io-aV3"/>
                         <segue destination="wOc-UN-QVD" kind="relationship" relationship="viewControllers" id="dzi-Nt-Lqo"/>
+                        <segue destination="N7k-Dx-Vwt" kind="relationship" relationship="viewControllers" id="A3H-Lf-Srz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ppg-ph-fVN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1543,6 +1544,66 @@
             </objects>
             <point key="canvasLocation" x="1100" y="-479"/>
         </scene>
+        <!--Account View Controller-->
+        <scene sceneID="LKC-5l-oKT">
+            <objects>
+                <viewController id="4m6-4M-pAt" customClass="AccountViewController" customModule="MyTaiwanStock" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fop-Md-3kF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GSN-rh-AeI">
+                                <rect key="frame" x="147" y="308" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="aVs-7N-GlH"/>
+                                    <constraint firstAttribute="width" constant="120" id="cJI-WO-f6s"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKv-jR-DHA">
+                                <rect key="frame" x="186" y="436" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ba-m6-nTe">
+                                <rect key="frame" x="167" y="626" width="80" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign Out"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyt-YM-8jY" customClass="GIDSignInButton">
+                                <rect key="frame" x="147" y="465" width="120" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="QIT-Oe-zhc"/>
+                                    <constraint firstAttribute="height" constant="30" id="nlq-d9-fCa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LA3-sX-6Z3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1Ba-m6-nTe" firstAttribute="bottom" secondItem="LA3-sX-6Z3" secondAttribute="bottom" constant="-30" id="IK6-HI-WNr"/>
+                            <constraint firstItem="1Ba-m6-nTe" firstAttribute="centerX" secondItem="fop-Md-3kF" secondAttribute="centerX" id="Ma0-Yj-Lna"/>
+                            <constraint firstItem="GSN-rh-AeI" firstAttribute="centerX" secondItem="fop-Md-3kF" secondAttribute="centerX" id="QFG-uK-JXe"/>
+                            <constraint firstItem="cyt-YM-8jY" firstAttribute="centerX" secondItem="fop-Md-3kF" secondAttribute="centerX" id="bkD-si-fCa"/>
+                            <constraint firstItem="cyt-YM-8jY" firstAttribute="top" secondItem="uKv-jR-DHA" secondAttribute="bottom" constant="8" symbolic="YES" id="hij-8T-8DF"/>
+                            <constraint firstItem="uKv-jR-DHA" firstAttribute="top" secondItem="GSN-rh-AeI" secondAttribute="bottom" constant="8" symbolic="YES" id="jDx-yY-Mkg"/>
+                            <constraint firstItem="GSN-rh-AeI" firstAttribute="centerY" secondItem="fop-Md-3kF" secondAttribute="centerY" id="w0O-h3-WB9"/>
+                            <constraint firstItem="uKv-jR-DHA" firstAttribute="centerX" secondItem="fop-Md-3kF" secondAttribute="centerX" id="yEs-u1-T4Q"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="1fB-Lv-jO8"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="uKv-jR-DHA" id="Kdi-77-LBX"/>
+                        <outlet property="googleSignInButton" destination="cyt-YM-8jY" id="7bC-sH-gGd"/>
+                        <outlet property="signOutButton" destination="1Ba-m6-nTe" id="7G7-Yv-Nqy"/>
+                        <outlet property="userImageView" destination="GSN-rh-AeI" id="N85-wk-GSU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yiM-1i-P8q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2671.0144927536235" y="1826.9021739130437"/>
+        </scene>
         <!--Setting-->
         <scene sceneID="dmk-GG-vVj">
             <objects>
@@ -1560,7 +1621,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="brP-1Z-4an" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2328.985507246377" y="1826.9021739130437"/>
+            <point key="canvasLocation" x="-1421.7391304347827" y="1826.9021739130437"/>
+        </scene>
+        <!--Account-->
+        <scene sceneID="8bx-R8-e3e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N7k-Dx-Vwt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Account" image="person" catalog="system" id="Jcn-5K-cdk"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PEd-KR-evi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="4m6-4M-pAt" kind="relationship" relationship="rootViewController" id="Tjs-uY-8WD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KxJ-se-wcn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3578.2608695652175" y="1826.9021739130437"/>
         </scene>
     </scenes>
     <resources>
@@ -1569,6 +1649,7 @@
         <image name="gear" catalog="system" width="128" height="119"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
         <image name="newspaper" catalog="system" width="128" height="111"/>
+        <image name="person" catalog="system" width="128" height="117"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="labelColor">
